# Proyecto_Go

./: CMakeLists.txt  README.md
Codigo/: Jugador.cpp  Jugador.h  Maquina.cpp  Maquina.h  Menu.cpp  Menu.h  Reglas.cpp  Reglas.h  Tablero.cpp  Tablero.h  Types.h  main.cpp
